--- a/mqconsumer/pom.xml
+++ b/mqconsumer/pom.xml
@@ -68,6 +68,17 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.48</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.11</artifactId>
+            <version>0.10.0.1</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>slf4j-log4j12</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 
     <build>
