--- a/mqconsumer/pom.xml
+++ b/mqconsumer/pom.xml
@@ -13,6 +13,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>mqconsumer</name>
     <description>mqconsumer</description>
+    <packaging>war</packaging>
     <properties>
         <java.version>11</java.version>
     </properties>
