--- a/room-api/pom.xml
+++ b/room-api/pom.xml
@@ -13,6 +13,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>room-api</name>
     <description>room-api</description>
+    <packaging>war</packaging>
     <properties>
         <java.version>11</java.version>
     </properties>
