--- a/room-consumer/src/main/resources/application.yml
+++ b/room-consumer/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
     allow-bean-definition-overriding: true #当遇到同样名字的时候，是否允许覆盖注册
 
   kafka:
-    bootstrap-servers: 110.40.192.207:9092
+    bootstrap-servers: localhost:9091, localhost:9092, localhost:9093
     consumer:
       # 自动提交的时间间隔 在spring boot 2.X 版本中这里采用的是值的类型为Duration 需要符合特定的格式，如1S,1M,2H,5D
       auto-commit-interval: 1S
