solve profile error

--- a/room-consumer/src/main/resources/application.yml
+++ b/room-consumer/src/main/resources/application.yml
@@ -64,8 +64,10 @@ spring:
 #showSql
 logging:
   level:
-    org:
-      springframework: DEBUG
+    com:
+      distributed:
+        roomconsumer:
+          mapper : debug
 
 
 file:
