--- a/room-provider/src/main/resources/application.yml
+++ b/room-provider/src/main/resources/application.yml
@@ -98,6 +98,15 @@ logging:
         roomprovider:
           mapper : debug
 
+file:
+  path-mac: /Users/hanchenzhu/Pictures/img/
+  path-centos: /usr/local/img/
+  url-web: 110.40.192.207
+  url-local: 127.0.0.1
+  port: 7006
+  suffix-mac: /image/
+  suffix-centos: /newproject-0.0.1-SNAPSHOT/image/
+
 
 
 
